--- a/app/assets/stylesheets/components/_banner_small.scss
+++ b/app/assets/stylesheets/components/_banner_small.scss
@@ -1,14 +1,10 @@
 .banner-small{
   width: auto;
   opacity: 0%;
-    // border:1px solid #DEDCDC;
     position: absolute;
     right:2%;
     top:0%;
     z-index:100;
-
-
-
   img{
     display:inline-block;
     height: 15vh ;
@@ -28,9 +24,10 @@
       z-index: 100;
       letter-spacing: 0.1em;
     a{
-      color: black;
-      font-size: 0.8em;
+     color: black;
+      font-size: 1.2em;
       text-decoration: none;
+      letter-spacing: 0.1em;
     }
 
   a:active, a:focus {
@@ -46,9 +43,10 @@ button:focus {outline:0;}
   justify-content: flex-start;
   align-items: center;
   width: 35%;
-  a{
-    padding: 0 4%;
-  }
+   a{
+      padding: 0 20%;
+      font-weight: 300;
+    }
 }
 
 .menu-small-right{
@@ -58,11 +56,11 @@ button:focus {outline:0;}
   width: 50%;
   a {
     padding: 0 2%;
+    font-size: 0.8em;
   }
-
 }
 
-.dropbtn {
+.dropbtn-small {
     background-color: Transparent;
     color: black;
     padding: 0;
@@ -70,22 +68,19 @@ button:focus {outline:0;}
     border: none;
     letter-spacing: 0.1em;
     line-height: 0.8em;
+}
 
-
-  }
-
-  .dropdown {
+  .dropdown-small {
     position: relative;
     display: inline-block;
-    padding: 0 4%;
-        line-height: 0.8em;
+    // padding: 0 4%;
+    //     line-height: 0.8em;
     a{
       font-variant: all-petite-caps;
     }
-
   }
 
-  .dropdown-content {
+  .dropdown-content-small {
     display: none;
     position: absolute;
     background-color: white;
@@ -93,10 +88,9 @@ button:focus {outline:0;}
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     // font-size: 0.8em;
-
   }
 
-  .dropdown-content a {
+  .dropdown-content-small a {
     color: black;
     padding: 12px 16px;
     font-size: 1em;
@@ -104,18 +98,16 @@ button:focus {outline:0;}
     display: block;
     // font-size: 0.8em;
   }
-  .dropdown-content a:hover {
+  .dropdown-content-small a:hover {
     background-color: #F5F5F5;
   }
 
-// .dropdown-content a:hover {background-color: #ddd}
-
-.dropdown:hover .dropdown-content {
+.dropdown-small:hover .dropdown-content {
   display: block;
 }
 
 
-.dropdown-submenu {
+.dropdown-submenu-small {
   position: relative;
     // a{
     //   font-size: 0.6em;
@@ -123,7 +115,7 @@ button:focus {outline:0;}
 
   }
 
-  .dropdown-submenu>.dropdown-menu {
+  .dropdown-submenu-small>.dropdown-menu-small {
     top: 0;
     left: 100%;
     // margin-top: -6px;
@@ -133,7 +125,7 @@ button:focus {outline:0;}
     // border-radius: 0 6px 6px 6px;
   }
 
-  .dropdown-submenu:hover>.dropdown-menu {
+  .dropdown-submenu-small:hover>.dropdown-menu-small {
     display: block;
   }
 
